syed-cf.yml
AWSTemplateFormatVersion: 2010-09-09
Description: Syed CF Template to create a VPC, allow SSH access from trusted networks, and create a single instance with an Elastic IP address
          Testing area for AWS: This template builds a linux VM for CEG 2350 @ WSU.
Parameters:
        KeyName:
                Description: Name of an existing EC2 KeyPair to enable SSH access to the instance
                Type: 'AWS::EC2::KeyPair::KeyName'
                ConstraintDescription: must be the name of an existing EC2 KeyPair.
        SSHLocation:
                Description: ' The IP address range that can be used to access the EC2 instance'
                Type: String
                MinLength: '9'
                MaxLength: '18'
                Default: 0.0.0.0/0
                AllowedPattern: '(\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})'
                ConstraintDescription: must be a valid IP CIDR range of the form x.x.x.x/x.
        Mappings:
                AWSInstanceType2Arch:  # Supported architectures (x64bit only)
                t2.micro:
                        Arch: HVM64
                        AWSRegionUbuntu: ami-04505e74c0741db8d 
                        us-east-1:    N. Virginia
                        PV64: NOT_SUPPORTED
                        HVM64: ami-07d0cf3af28718ef8
                        HVMG2: NOT_SUPPORTED
        Resources:
                VPC:
                        Type: 'AWS::EC2::VPC'
                        Properties:
                                CidrBlock: 10.0.0.0/24
                                Tags: Syed-CF-VPC
                                    - Key: Application
                                      Value: !Ref 'AWS::StackId'
                                    - Key: Name
                                      Value: CEG2350 VPC
                Subnet:
                        Type: 'AWS::EC2::Subnet'
                        Properties:
                                VpcId: !Ref VPC
                                CidrBlock: 10.0.0.0/28
                                Tags: Syed-CF-Subnet
                                    - Key: Application
                                      Value: !Ref 'AWS::StackId'
                InternetGateway:
                        Type: 'AWS::EC2::InternetGateway'
                        Properties:
                                Tags: Syed-CF-IG
                                        - Key: Application
                                          Value: !Ref 'AWS::StackId'
                AttachGateway:
                        Type: 'AWS::EC2::VPCGatewayAttachment'
                        Properties:
                                VpcId: !Ref VPC
                                InternetGatewayId: !Ref InternetGateway
                RouteTable:
                        Type: 'AWS::EC2::RouteTable'
                        Properties:
                                VpcId: !Ref VPC
                                Tags: Syed-CF-RT
                                        - Key: Application
                                          Value: !Ref 'AWS::StackId'
                Route:
                        Type: 'AWS::EC2::Route'
                        DependsOn: AttachGateway
                        Properties:
                                RouteTableId: !Ref RouteTable
                                DestinationCidrBlock: 0.0.0.0/0
                                GatewayId: !Ref InternetGateway
                SubnetRouteTableAssociation:
                        Type: 'AWS::EC2::SubnetRouteTableAssociation'
                        Properties:
                                SubnetId: !Ref Subnet
                                RouteTableId: !Ref RouteTable
                UbuntuIPAddress:
                        Type: 'AWS::EC2::EIP'
                        DependsOn: AttachGateway
                        Properties:
                                Domain: vpc
                                InstanceId: !Ref PublicUbuntuInstance
                Lab1SecurityGroup:
                       Type: 'AWS::EC2::SecurityGroup'
                       Properties:
                               VpcId: !Ref VPC
                               GroupDescription: Enable SSH access via port 22 and open all insternal ports.
                               SecurityGroupIngress:
                                       - IpProtocol: tcp
                                         FromPort: '22'
                                         ToPort: '22'
                                         CidrIp: !Ref SSHLocation
                                       - IpProtocol: tcp
                                         FromPort: '22'
                                         ToPort: '22'
                                         CidrIp: 130.108.0.0/16  # WSU CIDR
                                       - IpProtocol: -1
                                         FromPort: '-1'
                                         ToPort: '-1'
                                         CidrIp: 10.0.0.0/24
                                       - IpProtocol: tcp
                                         FromPort: '1'
                                         ToPort: '65535'
                                         CidrIp: 0.0.0.0/0
                                         PublicUbuntuInstance:
                                                 Type: 'AWS::EC2::Instance'
                                                 DependsOn: AttachGateway
                                                 Properties:
                                                         ImageId: !FindInMap 
                                       - AWSRegionUbuntu
                                       - !Ref 'AWS::Region'
                                       - !FindInMap 
                                       - AWSInstanceType2Arch
                                       - t2.micro
                                       - Arch
                               InstanceType: t2.micro
                               KeyName: !Ref KeyName
                               Tags: Syed-CF-IT
                                       - Key: Application
                                         Value: !Ref 'AWS::StackId'
                                       - Key: Syed-CF-instance
                                         Value: CEG2350 Ubuntu
                                         NetworkInterfaces:
                                                 - GroupSet:
                                                         - !Ref Lab1SecurityGroup
                                                   AssociatePublicIpAddress: 'true'
                                                   DeviceIndex: '0'
                                                   DeleteOnTermination: 'true'
                                                   SubnetId: !Ref Subnet
                                                   PrivateIpAddress: 10.0.0.25
                                                   UserData:
                                                           Fn::Base64:
                                                                   !Sub |
                                                                   #!/bin/bash -xe
                                                                   apt-get update && \
                                                                   apt-get install -y \
                                                                   sudo apt install git && \
                                                                   sudo apt install python3 && \
                                                                   sudo apt-get -y install python3-pip && \
                                                                   host name Syed-AMI \
                                                                   sudo apt install
                                                                     git \
                                                                     htop \
                                                                     sl && \
                                                                   echo "This is from the CF template" > /home/ubuntu/hello.txt && \  
                                                                   reboot
